--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -23,35 +23,89 @@
 
 /* Content */
 .content {
-    flex: 1;
-    padding: 40px 60px;
+    width: 100%;
+    display: flex;
+    padding: 20px 20px;
     background-color: #fafafa;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
-.card {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.05);
-    padding: 20px;
-    margin-bottom: 30px;
+/* Card container */
+.money-card {
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    padding: 20px 25px;
+    width: 100%;
+    max-width: 305px;
+    height: 110px;
+    transition: all 0.3s ease;
 }
 
-.card h3 {
-    font-size: 18px;
+/* Hover animation */
+.money-card:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+}
+
+.money-sub-card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 10px;
+    margin-bottom: 7px;
+}
+
+/* Text section */
+.money-info {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.money-title {
+    font-size: 14px;
+    color: #6c757d;
+    margin: 0;
+}
+
+.money-amount {
+    font-size: 25px;
+    color: #000;
     font-weight: 600;
-    margin-bottom: 10px;
-    color: #222;
+    margin: 0;
 }
 
-.card hr {
-    border: none;
-    border-top: 1px solid #ddd;
+.money-change {
+    font-size: 0.875rem;
+    color: #000;
+    margin: 0;
+}
+
+.money-change strong {
+    color: #4CAF50;
+}
+
+/* Icon box */
+.money-icon {
+    background-color: #212529;
+    color: #fff;
+    width: 42px;
+    height: 42px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Footer */
 .footer {
     position: absolute;
     bottom: 0;
+    background-color: #fff;
     text-align: center;
     font-size: 13px;
     color: #777;
@@ -60,3 +114,9 @@
     width: 100%;
 }
 
+@media only screen and (max-width: 800px) {
+    .money-card {
+        width: 100%;
+        max-width: 100%;
+    }
+}
