--- a/src/pages/styles/Dashboard.css
+++ b/src/pages/styles/Dashboard.css
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    background-color: #fff;
+    background-color: #fafafa;
 }
 
 /* Content */
@@ -33,6 +33,7 @@
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
+    height: 300px;
 }
 
 
