--- a/src/components/styles/Sidebar.css
+++ b/src/components/styles/Sidebar.css
@@ -14,7 +14,7 @@
   transition: all 0.3s ease;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
-
+ 
 /* Menu container */
 .menu {
   width: 100%;
@@ -29,7 +29,7 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   column-gap: 20px;
   font-size: 14px;
   color: #333;
@@ -38,6 +38,11 @@
   border-radius: 10px;
   user-select: none;
 }
+
+.menu-item>span{
+  width: 100%;
+}
+
 
 .menu-item:hover { 
   background-color: #ccc;
@@ -50,29 +55,34 @@
   font-weight: 500;
 }
 .menu-item.active-red{
-  background-color: rgb(252, 104, 104);
-  color: #fff;
+  color: #000;
   font-weight: 500;
+  align-self: flex-end;
+}
+.active-red:hover{
+  color: #fff;
 }
 
 /* Submenu container */
 .submenu {
-  width: 100%;
+  width: 85%;
   display: flex;
   flex-direction: column;
-  background-color: #fafafa;
+  align-items: flex-start;
+  justify-content: center;
   margin-top: -5px;
   margin-bottom: 5px;
   overflow: hidden;
   transition: max-height 0.3s ease;
+  align-self: flex-end;
 }
 
 /* Submenu items */
 .submenu-item {
-  padding: 15px 35px;
+  padding: 15px 15px;
   font-size: 13.5px;
   cursor: pointer;
-  color: #555;
+  color: #555555;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -120,5 +130,9 @@
   .submenu-item {
     padding: 8px 45px;
     font-size: 13px;
+  }
+  .logout-menu{
+    position: absolute;
+    bottom: 120px;
   }
 }
