--- a/src/pages/styles/Dashboard.css
+++ b/src/pages/styles/Dashboard.css
@@ -25,7 +25,7 @@
 /* Content */
 .mainsection {
     width: calc(100% - 270px);
-    display: flex; 
+    display: flex;
     padding: 10px;
     background-color: #eee;
     flex-wrap: wrap;
@@ -35,14 +35,13 @@
 
 .section {
     width: 100%;
-    height: 280px;
+    /* height: 280px; */
     max-height: 100%;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
-    column-gap: 25px;
+    gap: 20px;
     flex-wrap: wrap;
-    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 60px 40px -7px; */
     background-color: transparent;
     overflow-y: auto;
 }
@@ -51,14 +50,13 @@
 .money-card {
     background: #fff;
     border-radius: 12px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     padding: 20px 25px;
     width: 100%;
     max-width: 305px;
     height: 115px;
     transition: all 0.3s ease;
     cursor: pointer;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    box-shadow: rgba(255, 255, 255, 0.25) 0px 50px 100px -20px, rgba(255, 255, 255, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 /* Hover animation */
@@ -120,12 +118,18 @@
 }
 
 @media only screen and (max-width: 800px) {
+    .mainsection {
+        width: 100%;
+    }
+
+    .section {
+        height: 100%;
+    }
+
     .money-card {
         width: 100%;
         max-width: 100%;
     }
 
-    .content {
-        height: 100%;
-    }
+
 }
