--- a/src/pages/styles/Products.css
+++ b/src/pages/styles/Products.css
@@ -1,10 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Inter", sans-serif;
-}
-
 .products-container {
   display: flex;
   flex-direction: column;
@@ -25,28 +18,6 @@
 }
 
 
-.product-table {
-  width: 100%;
-  border-collapse: separate;
-  background-color: #fff;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.product-table th,
-.product-table td {
-  padding: 14px 18px;
-  font-size: 14px;
-  color: #333;
-  border-bottom: 1px solid #f0f0f0;
-  text-align: left;
-}
-
-.product-table th {
-  background-color: #f7f8fa;
-  font-weight: 600;
-}
-
 .product-name-cell {
   display: flex;
   align-items: center;
@@ -59,7 +30,6 @@
   border-radius: 6px;
   object-fit: cover;
 }
-
 
 .status {
   padding: 4px 10px;
@@ -97,11 +67,6 @@
   transform: scale(1.2);
 }
 
-/* Hover row highlight */
-tr:hover {
-  background-color: #f7f9ff;
-  position: relative;
-}
 
 /* Hover card styling */
 .hover-card-cell {
@@ -167,7 +132,7 @@ tr:hover {
   box-shadow: 0 8px 40px rgba(255, 255, 255, 0.4);
   color: #000;
   padding: 30px 40px;
-  max-width: 1000px;
+  max-width: 1000px; 
   width: 90%;
   animation: fadeIn 0.4s ease;
   height: 90%;
@@ -246,9 +211,9 @@ tr:hover {
 
 .input-tooltip {
   margin-bottom: 10px;
-  color: red;
+  color: rgb(229, 255, 0);
   width: 100%;
-  height: 60px;
+  height: 60px; 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
